Removed collapsableness from trips and fixed some crazy stuff that was going on with the CSS. Now I'm going to move on to adding collapsableness to ththe days.

--- a/www/style/app.css
+++ b/www/style/app.css
@@ -262,6 +262,10 @@ li.vehicle-data {
     color: red;
  }
 
+ .ui-content .ui-listview, .ui-panel-inner>.ui-listview {
+    margin: 0px;
+}
+
  /* Red button theme for JQuery Mobile
  * - Use data-theme="r" for red versions of the default JQuery Mobile Buttons.
  ******************************************************************************************/
